hphp/hack/test/typecheck/assignment_sequencing/switch_case_assn.php.exp
ERROR: File "switch_case_assn.php", line 6, characters 11-12:
Assignments can no longer be used as expressions. Pull the assignment out into a separate statement. (Parsing[1002])
ERROR: File "switch_case_assn.php", line 3, characters 10-12:
Was expecting a return type hint (Typing[4030])
ERROR: File "switch_case_assn.php", line 5, characters 3-131:
This `switch` case cannot be checked for exhaustivity. Please provide a default. Without a default, when none of the cases match, a runtime exception will be thrown. (Typing[4489])
  File "switch_case_assn.php", line 5, characters 11-12:
  The scrutinee has type `int` which is not an enum, enum class, enum class label, null, or nullable or tuples of those types.
ERROR: File "switch_case_assn.php", line 6, characters 11-12:
Don't assign to variables inside of case labels (Typing[4145])
